field->store resuts passing is fixed for REAL and INT for Item_param (BUG3223)

sql/item.cc:
  field->store resuts passing is fixed for REAL and INT
tests/client_test.c:
  removed debugging commnet
  fixed type casting
  test for BUG#3223